--- a/github-user-card/src/App.css
+++ b/github-user-card/src/App.css
@@ -1,33 +1,27 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.flex{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-wrap: wrap;
+  padding: 100px;
 }
-
-.App-link {
-  color: #61dafb;
+.git-card{
+  background: white;
+  margin: 2em;
+  height: 300px;
+  width: 250px;
+  text-align: center;
+  box-shadow: 0px 10px 24px 0px rgba(0,0,0,0.16);
+  padding: 1em;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.git-img{
+  display: block;
+  height: 200px;
+  margin: 0 auto;
+  border-radius: 100px;
+}
+span{
+  display: block;
+  font-weight: 600;
+  font-size: 40px;
+  text-align: center;
+  padding-top: 25px;
 }
