--- a/github-usercard/src/App.css
+++ b/github-usercard/src/App.css
@@ -67,6 +67,7 @@ h1 {
 h2 {
   font-size: 30px;
   font-weight: bold;
+  color:#e4cdff;
 }
 
 h3 {
@@ -81,7 +82,7 @@ h4 {
 
 p{
   font-size: 18px;
-  line-height: 24px;
+  line-height: 44px;
   text-align: left;
 }
 
@@ -108,7 +109,7 @@ p{
 .user-card {
   background: white;
   width: 50%;
-  margin: 0 auto 80px;
+  margin: 0 auto 100px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   border-radius: 5px;
 }
@@ -136,9 +137,17 @@ p{
   justify-content: space-between;
 }
 
+
 .userFooter {
   border-top: 1px lightgray solid;
   display: flex;
   justify-content: space-between;
   padding: 20px 40px;
+}
+
+.numbers {
+  background-color: #e4cdff;
+  padding: 10px;
+  border-radius: 50%;
+  margin-left: 5px;
 }
