--- a/github-usercard/src/App.css
+++ b/github-usercard/src/App.css
@@ -106,6 +106,8 @@ p{
 
 }
 
+
+/* UserCard.js Styling */
 .user-card {
   background: white;
   width: 50%;
@@ -150,4 +152,49 @@ p{
   padding: 10px;
   border-radius: 50%;
   margin-left: 5px;
+}
+
+/* FollowersCard.js Styling */
+
+.card-container {
+  display: flex;
+  flex-flow: wrap;
+  margin: 50px auto;
+  width: 1200px;
+}
+
+.followers-card {
+  display:flex;
+  flex-flow: column nowrap;
+  align-content: center;
+  border-radius: 5px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.45), 0 1px 2px rgba(0, 0, 0, 0.60);
+  background:white;
+  width: 320px;
+  height: 480px;
+  margin: 20px;
+}
+
+.followerImg-container {
+  width: 320px;
+  margin: 0 auto;
+  padding: 10px;
+}
+
+.followerImg {
+  width: 300px;
+  height: auto;
+}
+
+.cardInfo {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+}
+
+.followerLogin {
+  padding: 20px 0;
+  text-align: center;
+  font-size: 16px;
 }
