--- a/github-usercard/src/App.css
+++ b/github-usercard/src/App.css
@@ -50,6 +50,7 @@ body {
   background: linear-gradient(141deg, #dfe1e3 0%, #701acf 51%, #350b57 75%);
   background-repeat: no-repeat;
   background-size: cover;
+  background-attachment: fixed;
   width: 100%;
   height: 100%;
   overflow-x: hidden;
@@ -68,6 +69,8 @@ h2 {
   font-size: 30px;
   font-weight: bold;
   color:#e4cdff;
+  margin-bottom: 80px;
+  text-decoration: underline;
 }
 
 h3 {
@@ -87,7 +90,6 @@ p{
 }
 
 
-
 .App {
   max-width: 960px;
   margin: 0 auto;
@@ -103,7 +105,8 @@ p{
   display: flex;
   flex-direction: column;
   justify-content: center;
-
+  border-bottom: 1px solid #350b57;
+  margin-bottom: 80px;
 }
 
 
@@ -111,7 +114,7 @@ p{
 .user-card {
   background: white;
   width: 50%;
-  margin: 0 auto 100px;
+  margin: 0 auto 50px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   border-radius: 5px;
 }
