--- a/react-github-user-card/src/index.css
+++ b/react-github-user-card/src/index.css
@@ -92,3 +92,11 @@ code {
   margin-top: 40px;
   margin-bottom: 25px;
 }
+.footerWrapper {
+  padding: 20px;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.75);
+  color: white;
+  margin-top: 40px;
+  height: 100px;
+}
