--- a/react-user-card/src/App.css
+++ b/react-user-card/src/App.css
@@ -23,6 +23,11 @@
   color: #61dafb;
 }
 
+ul.ui.list {
+  margin-right: 2%;
+}
+
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
