--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -9,14 +9,14 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: aquamarine;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: deeppink;
 }
 
 .App-link {
@@ -27,7 +27,16 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+body {
+  color: deeppink;
+  background-color: aquamarine;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
