--- a/github-user-card/src/App.css
+++ b/github-user-card/src/App.css
@@ -1,12 +1,26 @@
+body {
+  background: dodgerblue;
+}
+
+.header {
+  font-size: 2rem!important;
+  margin: 1px 0!important;
+}
+
+.ui.container{
+  display: flex!important;  
+  justify-content: center!important;
+}
+
+.ui.card{
+  margin: 15px 0!important;
+ 
+}
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
 
 .App-header {
   background-color: #282c34;
