--- a/react-github-user-card/src/App.css
+++ b/react-github-user-card/src/App.css
@@ -1,3 +1,9 @@
-.App {
-  text-align: center;
+body, html {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+  font-size: 62.5%;
+  font-family: monospace;
 }
