--- a/github-usercard-app/src/App.css
+++ b/github-usercard-app/src/App.css
@@ -1,22 +1,24 @@
+html {
+  background: #C0C0C0;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
+  align-content: center;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-top: 30px;
 }
 
-.App-link {
-  color: #09d3ac;
+.followerContainer, .userCard {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-content: center;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 80%;
+  padding: 10px;
+  border: 2px solid #5E259B;
 }
+
