--- a/source/src/index.css
+++ b/source/src/index.css
@@ -3,6 +3,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
+    background: silver;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -11,3 +12,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.github-octopus {
+  display:inline-flex;
+  justify-content: flex-end;
+  width: 50%;
+  margin: 10% 0 0 30% ;
+  height:auto;
+}
+
