--- a/source/src/styles.css
+++ b/source/src/styles.css
@@ -1,5 +1,24 @@
+
+
 .App {
     font-family: sans-serif;
     text-align: center;
-  }
   
+  }
+
+
+
+.user-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    margin: 0 0 0 0;
+    border: 2px solid red; 
+}
+
+  .card-group {
+    display:flexbox;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    border: 2px solid blue; 
+  }
