--- a/github-user-card/src/styles.css
+++ b/github-user-card/src/styles.css
@@ -6,3 +6,21 @@
 .header img{
     height: 3rem;
 }
+
+.cardWapper{
+    border: 1px solid black;
+    margin: 20px;
+}
+
+.image{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin: 20px;
+
+}
+
+.user-info{
+   display: flex;
+   flex-direction: column;
+}
