imported material UI

--- a/react-github-usercard/src/App.css
+++ b/react-github-usercard/src/App.css
@@ -9,13 +9,14 @@
 }
 
 .followers {
-  width: 70vw;
-  text-align: center;
+  margin: 1em;
+  padding: 1em;
   
 }
 
 .following {
-  display: flex;
+  margin: 1em;
+  padding: 1em;
 }
 
 .image {
