--- a/react-github-usercard/src/App.css
+++ b/react-github-usercard/src/App.css
@@ -38,6 +38,12 @@
   margin: 0 0 0.5rem 0;
   position: relative;
 }
+
+.git-logo {
+  width: 3vw;
+  height: 6vh;
+  margin: 0;
+}
 .followers > div > a:active {
   top: 1px;
 }
