--- a/react-github-usercard/src/App.css
+++ b/react-github-usercard/src/App.css
@@ -116,6 +116,16 @@
   color: white;
 }
 
+.see-followers {
+  background-color: #000;
+  color: white;
+  margin: 1em;
+  padding: 1em;
+  text-decoration: none;
+  border-radius: 2em;
+
+}
+
 .App-logo {
   height: 40vmin;
 }
