--- a/github-usercard/src/App.css
+++ b/github-usercard/src/App.css
@@ -16,7 +16,7 @@ App {
   text-align: center;
 }
 
-SaraCard {
+.sara-card>img {
   width: 50%;
   margin: 0 auto;
   
@@ -25,6 +25,7 @@ SaraCard {
 h1 {
   text-align: center;
   font-size: 2.0rem;
+  padding-top: 30px;
 }
 
 h2 {
@@ -38,15 +39,13 @@ p {
 }
 
 img {
-  width: 35%;
+  width: 20%;
   margin: 0 auto;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: row;
   flex-wrap: wrap;
-  padding: 15px 20px;
-
 }
 
 select {
@@ -57,11 +56,12 @@ select {
   color: #444;
   line-height: 1.3;
   padding: 0.6em 1.4em 0.5em 0.8em;
-  width: 40%;
-  max-width: 70%;
+  width: 30%;
+  max-width: 50%;
   box-sizing: border-box;
-  margin: 10px;
-  margin-top: 32px;
+  margin: 250px;
+  margin-top: 30px;
+  margin-bottom: 15px;
   border: 1px solid #aaa;
   box-shadow: 0 1px 0 1px rgba(0, 0, 0, 0.04);
   border-radius: 0.5em;
