--- a/github-user-card/src/App.css
+++ b/github-user-card/src/App.css
@@ -1,22 +1,37 @@
 .App {
   text-align: center;
+
 }
 
-.App-logo {
-  height: 40vmin;
+h1 {
+  text-align: center;
+  font-size: 3rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.card {
+  width: 100%;
+  padding: 20px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  border-radius: 5px;
+  box-shadow: 0 1px 6px -2px #000;
+  background-color: #fff;
+  margin-bottom: 30px;
 }
 
-.App-link {
-  color: #09d3ac;
+
+.card img {
+  width: 23vw;
+  height: 150px;
+  border-radius: 3px;
+  margin-right: 20px;
 }
+
+.name {
+  font-size: 1.5rem;
+  display:flex;
+  flex-direction: column;
+  width: 50vw;
+}
+
+
+
