--- a/github-user-card/src/index.css
+++ b/github-user-card/src/index.css
@@ -1,10 +1,14 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+@import url('https://fonts.googleapis.com/css?family=Saira+Condensed&display=swap');
+
+html body
+* {
+  font-family: 'Saira Condensed', sans-serif;
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 62.5%;
 }
 
 code {
