api follower data rendered

--- a/github-user-card/src/index.css
+++ b/github-user-card/src/index.css
@@ -5,10 +5,15 @@ html body
 * {
   font-family: 'Saira Condensed', sans-serif;
   box-sizing: border-box;
+
 }
 
 html {
   font-size: 62.5%;
+}
+
+body {
+  background-color: lightsalmon;
 }
 
 code {
