--- a/github-cards/src/App.css
+++ b/github-cards/src/App.css
@@ -1,8 +1,12 @@
-.App {
-  text-align: center;
+.app {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.App-logo {
+@import "https://unpkg.com/github-calendar@latest/dist/github-calendar-responsive.css";
+
+/* .App-logo {
   height: 40vmin;
 }
 
@@ -19,4 +23,4 @@
 
 .App-link {
   color: #09d3ac;
-}
+} */
