--- a/github-cards/src/index.css
+++ b/github-cards/src/index.css
@@ -1,3 +1,6 @@
+@import "./reset.css";
+@import "./normalize.css";
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
