--- a/github-user-card/src/index.css
+++ b/github-user-card/src/index.css
@@ -1,13 +1,25 @@
 body {
+
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+html{
+  background-color: #2d2d37;
+  color:white;
+}
+
+div{
+  background-color: #2d2d37;
+  color:white;
 }
