--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+#root {
+  width: 880px;
+  height: 880px;
+  margin: 0 auto;
+
+}
+
 .App {
   text-align: center;
 }
@@ -32,6 +39,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
