--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,6 @@
   width: 880px;
   height: 880px;
   margin: 0 auto;
-
 }
 
 .App {
@@ -39,8 +38,12 @@
   from {
     transform: rotate(0deg);
   }
-
   to {
     transform: rotate(360deg);
   }
+}
+
+img {
+  width: 60%;
+  border-radius: 50%;
 }
