--- a/src/App.css
+++ b/src/App.css
@@ -44,8 +44,6 @@
   }
 }
 
-
-
 .user-card {
   border: 1px solid black;
   border-radius: 3rem;
@@ -57,6 +55,26 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.card {
+  border: 1px solid black;
+  border-radius: 3rem;
+  padding: 1.5rem;
+  margin: 1rem;
+  box-shadow: 5px 5px 10px gray;
+  background-color: white;
+  max-height: 400px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+img {
+  margin-top: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 300px;
 }
 
 .user-card a {
