--- a/github-react-usercard/src/App.css
+++ b/github-react-usercard/src/App.css
@@ -2,10 +2,7 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -14,14 +11,14 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-image: linear-gradient(to top, #d299c2 0%, #fef9d7 100%);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: black;
 }
 
 .App-link {
